--- a/about.html
+++ b/about.html
@@ -147,28 +147,27 @@
             });
 
             const teamMembers = [
-                {
-                    name: 'Aarav Patel',
-                    bio: 'Aarav is our product curator, ensuring that every item on Aavaran meets our strict sustainability standards.',
-                    photo: '/images/aarav.jpg'
-                },
-                {
-                    name: 'Zara Khan',
-                    bio: 'Zara leads our content team, creating educational resources to help our community live more sustainably.',
-                    photo: '/images/zara.jpg'
-                },
-                {
-                    name: 'Rohan Sharma',
-                    bio: 'Rohan manages our community initiatives, organizing events and challenges to engage our eco-conscious members.',
-                    photo: '/images/rohan.jpg'
-                },
-                {
-                    name: 'Ananya Gupta',
-                    bio: 'Ananya oversees our impact tracking system, helping users visualize their positive environmental impact.',
-                    photo: '/images/ananya.jpg'
-                }
-            ];
-
+    {
+        name: 'Arushi Dhawan',
+        bio: 'Arushi is focused on developing the backend infrastructure for our platform. She is working on creating robust and efficient systems to support functionality of our website.',
+        photo: '/images/arushi.jpg'
+    },
+    {
+        name: 'Hemanshi Jaura',
+        bio: 'Hemanshi specializes in frontend development. She is responsible for implementing user interfaces and ensuring a smooth, intuitive user experience across our website.',
+        photo: '/images/hemanshi.jpg'
+    },
+    {
+        name: 'Kashvi Arora',
+        bio: 'Kashvi contributes to our frontend development efforts. She focuses on turning design concepts into functional web pages, with a keen eye for detail and user-friendly layouts.',
+        photo: '/images/kashvi.jpg'
+    },
+    {
+        name: 'Samridhi Gupta',
+        bio: 'Samridhi is part of our frontend development team. She works on implementing key features of our website, collaborating closely with the team to create a cohesive user interface.',
+        photo: '/images/samridhi.jpg'
+    }
+];
             const teamMembersContainer = document.getElementById('teamMembers');
             const ratingStarsContainer = document.getElementById('ratingStars');
             const feedbackForm = document.getElementById('feedbackForm');
