--- a/product.html
+++ b/product.html
@@ -582,7 +582,7 @@
                 name: "Organic Cotton Tote",
                 description: "Versatile and eco-friendly shopping companion",
                 price: 100,
-                image: "https://images.unsplash.com/photo-1597831160840-af54a14e0cad?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80",
+                image: "https://cdn.pixabay.com/photo/2019/07/26/11/33/bag-4364558_1280.jpg",
                 category: "home",
                 impact: {
                     plasticSaved: "50g",
@@ -594,7 +594,7 @@
                 name: "Beeswax Food Wraps",
                 description: "Reusable alternative to plastic wrap",
                 price: 150,
-                image: "https://images.unsplash.com/photo-1621844504215-17c1bd633c6f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=735&q=80",
+                image: "https://i.pinimg.com/originals/be/64/ac/be64ac6af0287df039071bf2a5ccfb16.jpg",
                 category: "kitchen",
                 impact: {
                     plasticSaved: "30g",
@@ -606,7 +606,7 @@
                 name: "Stainless Steel Straws",
                 description: "Durable and washable alternative to plastic straws",
                 price: 50,
-                image: "https://images.unsplash.com/photo-1572534493769-84d02bc17e14?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=880&q=80",
+                image: "https://plus.unsplash.com/premium_photo-1664007549590-6e5bdaf02c15?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
                 category: "kitchen",
                 impact: {
                     plasticSaved: "20g",
