--- a/product.html
+++ b/product.html
@@ -366,14 +366,16 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.5);
+            overflow-y: auto;
         }
 
         .modal-content {
             background-color: var(--card-background);
-            margin: 10% auto;
+            margin: 5% auto;
             padding: 20px;
             border-radius: 10px;
-            max-width: 500px;
+            max-width: 600px;
+            width: 90%;
             position: relative;
         }
 
@@ -383,6 +385,63 @@
             top: 10px;
             font-size: 1.5rem;
             cursor: pointer;
+        }
+
+        .impact-metrics {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 1rem;
+        }
+
+        .impact-metric {
+            text-align: center;
+        }
+
+        .impact-metric-value {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: var(--accent-color);
+        }
+
+        /* Pagination styles */
+        .pagination {
+            display: flex;
+            justify-content: center;
+            margin-top: 2rem;
+        }
+
+        .pagination button {
+            background-color: var(--primary-color);
+            color: white;
+            border: none;
+            padding: 0.5rem 1rem;
+            margin: 0 0.5rem;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .pagination button:hover {
+            background-color: var(--secondary-color);
+        }
+
+        .pagination button:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
+
+        /* Wishlist button */
+        .wishlist-btn {
+            background: none;
+            border: none;
+            color: #ff4081;
+            font-size: 1.5rem;
+            cursor: pointer;
+            transition: transform 0.3s;
+        }
+
+        .wishlist-btn:hover {
+            transform: scale(1.1);
         }
 
         /* Responsive styles */
@@ -508,7 +567,7 @@
         <div class="hero-content">
             <h1>Sustainable Living Starts Here</h1>
             <p>Discover eco-friendly products that make a difference for you and the planet</p>
-            <a href="register.html" class="cta-button">Shop Now</a>
+            <a href="#products-container" class="cta-button">Shop Now</a>
         </div>
     </section>
 
@@ -516,7 +575,8 @@
         New Arrivals: Check out our latest sustainable products!
     </div>
 
-    <h2 class="section-title">Our Sustainable Products</h2>
+    <main class="container">
+        <h2 class="section-title">Our Sustainable Products</h2>
         
         <div class="search-filter">
             <div class="search-bar">
@@ -524,7 +584,7 @@
                 <span class="search-icon" id="searchButton">🔍</span>
             </div>
             <div class="filters">
-                <button class="filter-btn" data-category="all">All</button>
+                <button class="filter-btn active" data-category="all">All</button>
                 <button class="filter-btn" data-category="home">Home</button>
                 <button class="filter-btn" data-category="personal">Personal Care</button>
                 <button class="filter-btn" data-category="kitchen">Kitchen</button>
@@ -534,12 +594,18 @@
         <div class="products" id="products-container">
             <!-- Product cards will be dynamically added here -->
         </div>
+
+        <div class="pagination">
+            <button id="prevPage">Previous</button>
+            <span id="currentPage"></span>
+            <button id="nextPage">Next</button>
+        </div>
     </main>
 
     <footer>
         <div class="container">
-            <p class="impact-statement">Together, we've saved 10,000kg of plastic and reduced 5,000kg of CO2 emissions!</p>
-            <p class="social-proof">Join over 50,000 customers making a difference with Aavaran</p>
+            <p class="impact-statement">Together, we can save 10,000kg of plastic and reduce 5,000kg of CO2 emissions!</p>
+            <p class="social-proof">Join us and together we can make a difference with Aavaran</p>
             <p>&copy; 2024 Aavaran. All rights reserved.</p>
         </div>
     </footer>
@@ -624,144 +690,225 @@
                     plasticSaved: "40g",
                     co2Reduced: "25g"
                 }
+            },
+            {
+                id: 7,
+                name: "Compostable Cutlery Set",
+                description: "Eco-friendly utensils for on-the-go meals",
+                price: 75,
+                image: "https://plus.unsplash.com/premium_photo-1661431012847-4042319febcb?q=80&w=1774&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
+                category: "kitchen",
+                impact: {
+                    plasticSaved: "25g",
+                    co2Reduced: "18g"
+                }
+            },
+            {
+                id: 8,
+                name: "Reusable Produce Bags",
+                description: "Mesh bags for plastic-free grocery shopping",
+                price: 80,
+                image: "https://images.unsplash.com/photo-1628752660419-ad1c751abe72?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
+                category: "home",
+                impact: {
+                    plasticSaved: "35g",
+                    co2Reduced: "22g"
+                }
+            },
+            {
+                id: 9,
+                name: "Solar-Powered Lantern",
+                description: "Sustainable lighting for outdoor adventures",
+                price: 200,
+                image: "https://images.unsplash.com/photo-1515940175183-6798529cb860?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1471&q=80",
+                category: "home",
+                impact: {
+                    plasticSaved: "60g",
+                    co2Reduced: "100g"
+                }
+            },
+            {
+                id: 10,
+                name: "Recycled Notebook",
+                description: "Stylish notebook made from recycled materials",
+                price: 60,
+                image: "https://images.unsplash.com/photo-1531346878377-a5be20888e57?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80",
+                category: "home",
+                impact: {
+                    plasticSaved: "15g",
+                    co2Reduced: "30g"
+                }
             }
         ];
 
         const productsContainer = document.getElementById('products-container');
-        const filterButtons = document.querySelectorAll('.filter-btn');
-        const darkModeToggle = document.getElementById('darkModeToggle');
-        const modal = document.getElementById('quickViewModal');
-        const modalContent = document.getElementById('modalContent');
-        const closeModal = document.querySelector('.close-modal');
-        const dynamicBanner = document.getElementById('dynamicBanner');
-        const searchInput = document.getElementById('searchInput');
-        const searchButton = document.getElementById('searchButton');
-        const hamburger = document.getElementById('hamburger');
-        const navLinks = document.getElementById('nav-links');
+    const filterButtons = document.querySelectorAll('.filter-btn');
+    const darkModeToggle = document.getElementById('darkModeToggle');
+    const modal = document.getElementById('quickViewModal');
+    const modalContent = document.getElementById('modalContent');
+    const closeModal = document.querySelector('.close-modal');
+    const dynamicBanner = document.getElementById('dynamicBanner');
+    const searchInput = document.getElementById('searchInput');
+    const searchButton = document.getElementById('searchButton');
+    const hamburger = document.getElementById('hamburger');
+    const navLinks = document.getElementById('nav-links');
+    const prevPageBtn = document.getElementById('prevPage');
+    const nextPageBtn = document.getElementById('nextPage');
+    const currentPageSpan = document.getElementById('currentPage');
 
-        function createProductCard(product) {
-            const card = document.createElement('div');
-            card.classList.add('product-card');
-            card.innerHTML = `
-                <img src="${product.image}" alt="${product.name}" class="product-image">
-                <div class="product-info">
-                    <h3 class="product-title">${product.name}</h3>
-                    <p class="product-description">${product.description}</p>
-                    <p class="product-price">₹${product.price.toFixed(2)}</p>
-                    <div class="product-actions">
-                        <button class="add-to-cart">Add to Cart</button>
-                        <button class="quick-view" data-id="${product.id}">Quick View</button>
+    let currentPage = 1;
+    const itemsPerPage = 8;
+    let filteredProducts = products;
+
+    function createProductCard(product) {
+        const card = document.createElement('div');
+        card.classList.add('product-card');
+        card.innerHTML = `
+            <img src="${product.image}" alt="${product.name}" class="product-image">
+            <div class="product-info">
+                <h3 class="product-title">${product.name}</h3>
+                <p class="product-description">${product.description}</p>
+                <p class="product-price">₹${product.price.toFixed(2)}</p>
+                <div class="product-actions">
+                    <button class="add-to-cart">Add to Cart</button>
+                    <button class="quick-view" data-id="${product.id}">Quick View</button>
+                   
+                </div>
+            </div>
+        `;
+        return card;
+    }
+
+    function displayProducts(page = 1) {
+        productsContainer.innerHTML = '';
+        const start = (page - 1) * itemsPerPage;
+        const end = start + itemsPerPage;
+        const paginatedProducts = filteredProducts.slice(start, end);
+        paginatedProducts.forEach(product => {
+            const card = createProductCard(product);
+            productsContainer.appendChild(card);
+        });
+        updatePagination();
+    }
+
+    function updatePagination() {
+        const totalPages = Math.ceil(filteredProducts.length / itemsPerPage);
+        currentPageSpan.textContent = `Page ${currentPage} of ${totalPages}`;
+        prevPageBtn.disabled = currentPage === 1;
+        nextPageBtn.disabled = currentPage === totalPages || totalPages === 0;
+    }
+
+    function filterProducts(category = 'all', searchTerm = '') {
+        filteredProducts = products.filter(product => 
+            (category === 'all' || product.category === category) &&
+            (product.name.toLowerCase().includes(searchTerm.toLowerCase()) || 
+             product.description.toLowerCase().includes(searchTerm.toLowerCase()))
+        );
+        currentPage = 1;
+        displayProducts(currentPage);
+    }
+
+    filterButtons.forEach(button => {
+        button.addEventListener('click', () => {
+            const category = button.getAttribute('data-category');
+            filterProducts(category, searchInput.value);
+            filterButtons.forEach(btn => btn.classList.remove('active'));
+            button.classList.add('active');
+        });
+    });
+
+    function performSearch() {
+        const activeCategory = document.querySelector('.filter-btn.active').getAttribute('data-category');
+        filterProducts(activeCategory, searchInput.value);
+    }
+
+    searchInput.addEventListener('input', performSearch);
+    searchButton.addEventListener('click', performSearch);
+
+    // Dark mode toggle
+    darkModeToggle.addEventListener('click', () => {
+        document.body.classList.toggle('dark-mode');
+    });
+
+    // Quick view modal
+    productsContainer.addEventListener('click', (e) => {
+        if (e.target.classList.contains('quick-view')) {
+            const productId = parseInt(e.target.getAttribute('data-id'));
+            const product = products.find(p => p.id === productId);
+            modalContent.innerHTML = `
+                <h2>${product.name}</h2>
+                <img src="${product.image}" alt="${product.name}" style="max-width: 100%; max-height: 300px; object-fit: cover;">
+                <p>${product.description}</p>
+                <p>Price: ₹${product.price.toFixed(2)}</p>
+                <div class="impact-metrics">
+                    <div class="impact-metric">
+                        <div class="impact-metric-value">${product.impact.plasticSaved}</div>
+                        <div>Plastic Saved</div>
+                    </div>
+                    <div class="impact-metric">
+                        <div class="impact-metric-value">${product.impact.co2Reduced}</div>
+                        <div>CO2 Reduced</div>
                     </div>
                 </div>
+                <button class="add-to-cart">Add to Cart</button>
             `;
-            return card;
+            modal.style.display = 'block';
         }
+    });
 
-        function displayProducts(category = 'all', searchTerm = '') {
-            productsContainer.innerHTML = '';
-            const filteredProducts = products.filter(product => 
-                (category === 'all' || product.category === category) &&
-                (product.name.toLowerCase().includes(searchTerm.toLowerCase()) || 
-                 product.description.toLowerCase().includes(searchTerm.toLowerCase()))
-            );
-            filteredProducts.forEach(product => {
-                const card = createProductCard(product);
-                productsContainer.appendChild(card);
-            });
-        }
+    closeModal.addEventListener('click', () => {
+        modal.style.display = 'none';
+    });
 
-        filterButtons.forEach(button => {
-            button.addEventListener('click', () => {
-                const category = button.getAttribute('data-category');
-                displayProducts(category, searchInput.value);
-                filterButtons.forEach(btn => btn.classList.remove('active'));
-                button.classList.add('active');
-            });
-        });
-
-        function performSearch() {
-            const activeCategory = document.querySelector('.filter-btn.active').getAttribute('data-category');
-            displayProducts(activeCategory, searchInput.value);
-        }
-
-        searchInput.addEventListener('input', performSearch);
-        searchButton.addEventListener('click', performSearch);
-
-        // Dark mode toggle
-        darkModeToggle.addEventListener('click', () => {
-            document.body.classList.toggle('dark-mode');
-        });
-
-        // Quick view modal
-        productsContainer.addEventListener('click', (e) => {
-            if (e.target.classList.contains('quick-view')) {
-                const productId = parseInt(e.target.getAttribute('data-id'));
-                const product = products.find(p => p.id === productId);
-                modalContent.innerHTML = `
-                    <h2>${product.name}</h2>
-                    <img src="${product.image}" alt="${product.name}" style="max-width: 100%;">
-                    <p>${product.description}</p>
-                    <p>Price: ₹${product.price.toFixed(2)}</p>
-                    <div class="impact-metrics">
-                        <div class="impact-metric">
-                            <div class="impact-metric-value">${product.impact.plasticSaved}</div>
-                            <div>Plastic Saved</div>
-                        </div>
-                        <div class="impact-metric">
-                            <div class="impact-metric-value">${product.impact.co2Reduced}</div>
-                            <div>CO2 Reduced</div>
-                        </div>
-                    </div>
-                    <button class="add-to-cart">Add to Cart</button>
-                `;
-                modal.style.display = 'block';
-            }
-        });
-
-        closeModal.addEventListener('click', () => {
+    window.addEventListener('click', (e) => {
+        if (e.target === modal) {
             modal.style.display = 'none';
-        });
+        }
+    });
 
-        window.addEventListener('click', (e) => {
-            if (e.target === modal) {
-                modal.style.display = 'none';
-            }
-        });
+    // Dynamic banner
+    const bannerMessages = [
+        "New Arrivals: Check out our latest sustainable products!",
+        "Free shipping on orders over ₹1000!",
+        "Join our loyalty program and earn eco-points with every purchase!",
+        "Subscribe to our newsletter for exclusive deals and eco-tips!"
+    ];
 
-        // Dynamic banner
-        const bannerMessages = [
-            "New Arrivals: Check out our latest sustainable products!",
-            "Limited Time Offer: 20% off all reusable water bottles!",
-            "Join our Rewards Program and earn points on every purchase!"
-        ];
+    let currentBannerIndex = 0;
 
-        let currentBannerIndex = 0;
-        setInterval(() => {
-            currentBannerIndex = (currentBannerIndex + 1) % bannerMessages.length;
-            dynamicBanner.textContent = bannerMessages[currentBannerIndex];
-        }, 5000);
+    function rotateBanner() {
+        dynamicBanner.textContent = bannerMessages[currentBannerIndex];
+        currentBannerIndex = (currentBannerIndex + 1) % bannerMessages.length;
+    }
 
-        // Add to cart functionality (placeholder)
-        document.addEventListener('click', (e) => {
-            if (e.target.classList.contains('add-to-cart')) {
-                alert('Product added to cart!');
-            }
-        });
+    setInterval(rotateBanner, 5000);
 
-        // Hamburger menu functionality
-        hamburger.addEventListener('click', () => {
-            navLinks.classList.toggle('show');
-        });
+    // Mobile menu toggle
+    hamburger.addEventListener('click', () => {
+        navLinks.classList.toggle('show');
+    });
 
-        // Close menu when clicking outside
-        document.addEventListener('click', (e) => {
-            if (!e.target.closest('.navbar')) {
-                navLinks.classList.remove('show');
-            }
-        });
+    // Pagination
+    prevPageBtn.addEventListener('click', () => {
+        if (currentPage > 1) {
+            currentPage--;
+            displayProducts(currentPage);
+        }
+    });
 
-        // Initialize the page
-        displayProducts();
-    </script>
+    nextPageBtn.addEventListener('click', () => {
+        const totalPages = Math.ceil(filteredProducts.length / itemsPerPage);
+        if (currentPage < totalPages) {
+            currentPage++;
+            displayProducts(currentPage);
+        }
+    });
+
+    // Initial display
+    document.addEventListener('DOMContentLoaded', () => {
+        displayProducts(1); // This will display the first page of products when the page loads
+        filterProducts(); // This will apply any default filters
+    });
+</script>
 </body>
 </html>
