--- a/community.html
+++ b/community.html
@@ -298,12 +298,12 @@
         <nav>
             <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
             <ul id="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Alternatives</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Community</a></li>
-                <li><a href="#">My Account</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="product.html">Products</a></li>
+                <li><a href="alternatives.html">Alternatives</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="community.html">Community</a></li>
+                <li><a href="register.html">My Account</a></li>
             </ul>
         </nav>
     </header>
