--- a/index.html
+++ b/index.html
@@ -157,13 +157,19 @@
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <h1 class="text-4xl font-bold text-green-600">Aavaran</h1>
             <ul class="hidden md:flex space-x-6">
-                <li><a href="index.html" class="text-green-700 hover:text-green-500 transition duration-300">Home</a></li>
-                <li><a href="product.html" class="text-green-700 hover:text-green-500 transition duration-300">Products</a></li>
-                <li><a href="alternatives.html" class="text-green-700 hover:text-green-500 transition duration-300">Alternatives</a>
+                <li><a href="index.html" class="text-green-700 hover:text-green-500 transition duration-300">Home</a>
                 </li>
-                <li><a href="blog.html" class="text-green-700 hover:text-green-500 transition duration-300">Blog</a></li>
-                <li><a href="community.html" class="text-green-700 hover:text-green-500 transition duration-300">Community</a></li>
-                <li><a href="register.html" class="text-green-700 hover:text-green-500 transition duration-300">My Account</a></li>
+                <li><a href="product.html"
+                        class="text-green-700 hover:text-green-500 transition duration-300">Products</a></li>
+                <li><a href="alternatives.html"
+                        class="text-green-700 hover:text-green-500 transition duration-300">Alternatives</a>
+                </li>
+                <li><a href="blog.html" class="text-green-700 hover:text-green-500 transition duration-300">Blog</a>
+                </li>
+                <li><a href="community.html"
+                        class="text-green-700 hover:text-green-500 transition duration-300">Community</a></li>
+                <li><a href="register.html" class="text-green-700 hover:text-green-500 transition duration-300">My
+                        Account</a></li>
             </ul>
             <button class="md:hidden text-green-600" id="mobile-menu-button">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
@@ -176,7 +182,8 @@
         <div class="md:hidden hidden" id="mobile-menu">
             <a href="index.html" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Home</a>
             <a href="product.html" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Products</a>
-            <a href="alternatives.html" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Alternatives</a>
+            <a href="alternatives.html"
+                class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Alternatives</a>
             <a href="blog.html" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Blog</a>
             <a href="community.html" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Community</a>
             <a href="register.html" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">My Account</a>
@@ -240,8 +247,8 @@
                 <button
                     class="bg-white text-green-600 px-6 py-3 rounded-full text-lg font-semibold hover:bg-green-100 transition duration-300"
                     data-aos="zoom-in" data-aos-delay="1000"><a href="register.html">
-                    Join the Challenge
-                </a>
+                        Join the Challenge
+                    </a>
                 </button>
             </div>
             <div class="absolute top-0 left-0 w-full h-full">
@@ -303,11 +310,11 @@
                 <h3 class="text-3xl font-bold mb-4 text-white" data-aos="fade-up">Ready to Make a Difference?</h3>
                 <p class="text-xl mb-8 text-green-100" data-aos="fade-up" data-aos-delay="200">Join our community and
                     start your sustainable journey today.</p>
-                <a href="register.html"<button
+                <a href="register.html" <button
                     class="bg-white text-green-600 px-6 py-3 rounded-full text-lg font-semibold hover:bg-green-100 transition duration-300"
                     data-aos="zoom-in" data-aos-delay="400">
                     Sign Up Now
-                </button></a>
+                    </button></a>
             </div>
             <div class="absolute top-0 left-0 w-full h-full">
                 <svg class="w-full h-full" viewBox="0 0 1440 320" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -330,7 +337,8 @@
                     <h5 class="text-xl font-semibold mb-4">Quick Links</h5>
                     <ul>
                         <li><a href="about.html" class="hover:text-green-300 transition duration-300">About Us</a></li>
-                        <li><a href="product.html" class="hover:text-green-300 transition duration-300">Products</a></li>
+                        <li><a href="product.html" class="hover:text-green-300 transition duration-300">Products</a>
+                        </li>
                         <li><a href="blog.html" class="hover:text-green-300 transition duration-300">Blog</a></li>
                         <li><a href="contact.html" class="hover:text-green-300 transition duration-300">Contact</a></li>
                     </ul>
