--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aavaran | Home</title>
+    <link rel="icon" type="image/x-icon" href="logoo.jpeg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
@@ -155,7 +156,11 @@
     <header class="fixed w-full bg-white bg-opacity-90 shadow-md z-50 transition-all duration-300 ease-in-out"
         id="header">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <h1 class="text-4xl font-bold text-green-600">Aavaran</h1>
+            <a href="index.html" class="flex items-center">
+                <img src="logoo.jpeg" alt="Aavaran Logo" class="h-10 mr-2">
+                <span class="text-2xl font-bold text-green-600">Aavaran</span>
+            </a>
+            <!--<h1 class="text-4xl font-bold text-green-600">Aavaran</h1>-->
             <ul class="hidden md:flex space-x-6">
                 <li><a href="index.html" class="text-green-700 hover:text-green-500 transition duration-300">Home</a></li>
                 <li><a href="product.html" class="text-green-700 hover:text-green-500 transition duration-300">Products</a></li>
