--- a/about.html
+++ b/about.html
@@ -150,22 +150,22 @@
     {
         name: 'Arushi Dhawan',
         bio: 'Arushi is focused on developing the backend infrastructure for our platform. She is working on creating robust and efficient systems to support functionality of our website.',
-        photo: '/images/arushi.jpg'
+        photo: 'https://cdn2.vectorstock.com/i/1000x1000/98/11/girl-icon-flat-single-avatarpeaople-icon-from-vector-14449811.jpg'
     },
     {
         name: 'Hemanshi Jaura',
         bio: 'Hemanshi specializes in frontend development. She is responsible for implementing user interfaces and ensuring a smooth, intuitive user experience across our website.',
-        photo: '/images/hemanshi.jpg'
+        photo: 'https://cdn2.vectorstock.com/i/1000x1000/98/11/girl-icon-flat-single-avatarpeaople-icon-from-vector-14449811.jpg'
     },
     {
         name: 'Kashvi Arora',
         bio: 'Kashvi contributes to our frontend development efforts. She focuses on turning design concepts into functional web pages, with a keen eye for detail and user-friendly layouts.',
-        photo: '/images/kashvi.jpg'
+        photo: 'https://cdn2.vectorstock.com/i/1000x1000/98/11/girl-icon-flat-single-avatarpeaople-icon-from-vector-14449811.jpg'
     },
     {
         name: 'Samridhi Gupta',
         bio: 'Samridhi is part of our frontend development team. She works on implementing key features of our website, collaborating closely with the team to create a cohesive user interface.',
-        photo: '/images/samridhi.jpg'
+        photo: 'https://cdn2.vectorstock.com/i/1000x1000/98/11/girl-icon-flat-single-avatarpeaople-icon-from-vector-14449811.jpg'
     }
 ];
             const teamMembersContainer = document.getElementById('teamMembers');
