--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
                 </p>
                 <p class="text-xl mb-8 text-white" data-aos="fade-up" data-aos-delay="600">Discover eco-friendly
                     products and sustainable alternatives for a greener lifestyle.</p>
-                <button
+               <a href="product.html" <button
                     class="bg-white text-green-600 px-8 py-3 rounded-full text-lg font-semibold hover:bg-green-100 transition duration-300"
                     data-aos="zoom-in" data-aos-delay="800">
                     Explore Now
-                </button>
+                </button> </a>
             </div>
             <div class="scroll-down">
                 <svg class="w-6 h-6 text-white animate-bounce" fill="none" stroke="currentColor" viewBox="0 0 24 24"
