--- a/tote.html
+++ b/tote.html
@@ -638,12 +638,12 @@
             });
 
             
-            const reviewsContainer = $('#reviews-container');
-            const reviews = [
-                { name: 'John D.', rating: 5, comment: 'Great product! Feels good to use and helps the environment.' },
-                { name: 'Sarah M.', rating: 4, comment: 'Nice tote bag, but took some getting used to.' },
-                { name: 'Mike R.', rating: 5, comment: 'Excellent quality and eco-friendly. Will buy again!' }
-            ];
+            //const reviewsContainer = $('#reviews-container');
+            //const reviews = [
+              //  { name: 'John D.', rating: 5, comment: 'Great product! Feels good to use and helps the environment.' },
+              //  { name: 'Sarah M.', rating: 4, comment: 'Nice tote bag, but took some getting used to.' },
+               // { name: 'Mike R.', rating: 5, comment: 'Excellent quality and eco-friendly. Will buy again!' }
+            //];
 
             function loadReviews() {
                 reviewsContainer.empty();
