--- a/waterbottle.html
+++ b/waterbottle.html
@@ -617,12 +617,12 @@
         });
 
         
-        const reviewsContainer = document.getElementById('reviews-container');
-        const reviews = [
-            { name: 'Emily S.', rating: 5, comment: 'Love this water bottle! Keeps my water cold all day.' },
-            { name: 'Alex M.', rating: 4, comment: 'Great quality, but a bit heavy for hiking.' },
-            { name: 'Sophia L.', rating: 5, comment: 'Stylish design and very durable. Highly recommend!' }
-        ];
+        //const reviewsContainer = document.getElementById('reviews-container');
+        //const reviews = [
+          //  { name: 'Emily S.', rating: 5, comment: 'Love this water bottle! Keeps my water cold all day.' },
+            //{ name: 'Alex M.', rating: 4, comment: 'Great quality, but a bit heavy for hiking.' },
+            //{ name: 'Sophia L.', rating: 5, comment: 'Stylish design and very durable. Highly recommend!' }
+        //];
 
         function loadReviews() {
             reviewsContainer.innerHTML = '';
