--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educational Content</title>
+    <link rel="icon" type="image/x-icon" href="logoo.jpeg">
     <link rel="stylesheet" href="blog.css">
 </head>
 <body>
